<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/icon_img"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/appicon"
            android:contentDescription="@string/app_name"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_widget_configure_appname"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/icon_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toEndOf="@+id/icon_img"
        app:layout_constraintTop_toTopOf="@+id/icon_img" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_widget_configure_description"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintStart_toStartOf="@+id/icon_img"
        app:layout_constraintTop_toBottomOf="@+id/icon_img" />

    <Spinner
        android:id="@+id/restaurant_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:paddingHorizontal="12dp"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/icon_img"
        app:layout_constraintTop_toBottomOf="@+id/app_description" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/app_widget_confirm_btn"
        android:textColor="@android:color/white"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_spinner" />
</androidx.constraintlayout.widget.ConstraintLayout>
